connections-social/infra/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: connections
  labels:
    app: connections
